fixt the fonts overflowings

--- a/style.css
+++ b/style.css
@@ -19,7 +19,12 @@ background-color: white;
   a {
     text-decoration: none;
   }
-  
+  .main-header{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 999;
+  }
     
   /* Navbar Styles */
   .navbar {
@@ -131,7 +136,7 @@ background-color: white;
   .services {
     margin-top: -120px;
     padding: 60px 20px;
-    /* background-color: white; */
+ 
     background-image: url('https://img.freepik.com/free-vector/blue-white-gradient-abstract-background_53876-60241.jpg?t=st=1740423791~exp=1740427391~hmac=41b899ab9d1a16f26ab812929b7d671103157d087150c4fa429d2f0d478fcf78&w=740');
     background-size: cover;
     background-position: center;
@@ -162,13 +167,7 @@ background-color: white;
     text-align: center;
     transition: transform 0.3s ease;
   }
-  /* .list-4{
-    background-image: url('https://img.freepik.com/premium-vector/computer-programing-coding-web-development-with-isometric-laptop-displaying-futuristic-ui_375605-384.jpg?w=1380');
-    
-    background-size: cover;
-    background-position: center;
 
-  } */
   .service-item:hover {
     transform: translateY(-10px);
   }
@@ -185,7 +184,7 @@ background-color: white;
     font-size: 1.5rem;
     padding-top: 40px;
     color: #141313;
-    font-weight: 900;
+    /* font-weight: 900; */
   }
   
   /* How We Serve Section */
@@ -234,9 +233,8 @@ background-color: white;
   }
   
   .serve-item p {
-    font-size: 1rem;
+    font-size: 1.4rem;
     color: #ffffff;
-    font-weight: 900;
   }
   
   /* Why Choose Us Section */
@@ -417,12 +415,13 @@ background-color: white;
       /* background-color: #252424; */
       background-image: url('https://img.freepik.com/premium-psd/business-stationery-mock-up-design_1307-29.jpg?w=740');
       background-size: cover;
-      margin-top: -120px;
+      margin-top: -90px;
       background-position: center;
       color: white;
       padding: 160px 20px;
       text-align: center;
     }
+  
    
     .service-list, .serve-list, .feedback-list {
       flex-direction: column;
